# pdsProject

./: README.md
cliendPdS/: CMakeLists.txt  Client.cpp  Client.h  client7  con_handler.cpp  con_handler.h  main.cpp
clientPdS/: CMakeLists.txt  JSON_utility.cpp  JSON_utility.h  directory_exception.cpp  directory_exception.h  file_watcher.cpp  file_watcher.h  filesystem_utility.cpp  filesystem_utility.h  hash_utility.cpp  hash_utility.h  main.cpp  parameters_exception.cpp  parameters_exception.h  tcp_client.cpp  tcp_client.h  user.cpp  user.h
clientPdS/Cartella2/Provolone/: File.prova
clientPdS/cartellaNuova/cartella1/: test
clientPdS/utilities/: filesystem_utility.h  hash_utility.cpp  hash_utility.h
prova/: prova.md
serverPdS/: CMakeLists.txt  JSON_utility.cpp  JSON_utility.h  Server.cpp  Server.h  con_handler.cpp  con_handler.h  db_utility.cpp  db_utility.h  filesystem_utility.cpp  filesystem_utility.h  hash_utility.cpp  hash_utility.h  main.cpp  server  tcp_connection.cpp  tcp_connection.h  tcp_server.cpp  tcp_server.h  thread_pool.cpp  thread_pool.h
serverPdS/db/: server.db  server.db-journal
serverPdS/mario/Cartella1/test/: test (copia)
serverPdS/mario/Cartella2/: File.prova  File2.prova
utilities/: CMakeLists.txt  JSON_utility.cpp  JSON_utility.h  filesystem_utility.cpp  filesystem_utility.h  hash_utility.cpp
